[package]
name = "operation-School-Cringe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
dominator = "0.5.32"
futures-signals = "0.3.31"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["HtmlInputElement", "HtmlButtonElement", "HtmlDivElement", "Headers", "Response", "RequestInit", "Window", "console", "HtmlParagraphElement"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
